--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -48,13 +48,11 @@
   when: l_is_atomic | bool
 
 - name: Ensure various deps are installed
-  package: name={{ item }} state=present
-  with_items: "{{ required_packages }}"
+  package: name={{ required_packages | join(',') }} state=present
   when: not l_is_atomic | bool
 
 - name: Ensure various deps for running system containers are installed
-  package: name={{ item }} state=present
-  with_items: "{{ required_system_containers_packages }}"
+  package: name={{ required_system_containers_packages | join(',') }} state=present
   when:
   - not l_is_atomic | bool
   - l_any_system_container | bool
